package com.cesar.school.core.teamsmembers.vo;

public enum Role {
    DEV, QA, PO, LEADER
}
